; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/msxml3/extr_schema.c_test_ifaces.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/msxml3/extr_schema.c_test_ifaces.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@IID_IXMLDOMSchemaCollection2 = common dso_local global i32 0, align 4
@CLSID_XMLSchemaCache60 = common dso_local global i32 0, align 4
@S_OK = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [50 x i8] c"Could not get CLSID_XMLSchemaCache60 iface: %08x\0A\00", align 1
@.str.1 = private unnamed_addr constant [14 x i8] c"unk != cache\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @test_ifaces to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_ifaces() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i32*, align 8
  %3 = alloca i64, align 8
  %4 = call i32* @create_cache_version(i32 60, i32* @IID_IXMLDOMSchemaCollection2)
  store i32* %4, i32** %1, align 8
  %5 = load i32*, i32** %1, align 8
  %6 = icmp ne i32* %5, null
  br i1 %6, label %8, label %7

7:                                                ; preds = %0
  br label %27

8:                                                ; preds = %0
  %9 = load i32*, i32** %1, align 8
  %10 = bitcast i32** %2 to i8**
  %11 = call i64 @IXMLDOMSchemaCollection2_QueryInterface(i32* %9, i32* @CLSID_XMLSchemaCache60, i8** %10)
  store i64 %11, i64* %3, align 8
  %12 = load i64, i64* %3, align 8
  %13 = load i64, i64* @S_OK, align 8
  %14 = icmp eq i64 %12, %13
  %15 = zext i1 %14 to i32
  %16 = load i64, i64* %3, align 8
  %17 = call i32 (i32, i8*, ...) @ok(i32 %15, i8* getelementptr inbounds ([50 x i8], [50 x i8]* @.str, i64 0, i64 0), i64 %16)
  %18 = load i32*, i32** %2, align 8
  %19 = load i32*, i32** %1, align 8
  %20 = icmp eq i32* %18, %19
  %21 = zext i1 %20 to i32
  %22 = call i32 (i32, i8*, ...) @ok(i32 %21, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.1, i64 0, i64 0))
  %23 = load i32*, i32** %2, align 8
  %24 = call i32 @IUnknown_Release(i32* %23)
  %25 = load i32*, i32** %1, align 8
  %26 = call i32 @IXMLDOMSchemaCollection2_Release(i32* %25)
  br label %27

27:                                               ; preds = %8, %7
  ret void
}

declare dso_local i32* @create_cache_version(i32, i32*) #1

declare dso_local i64 @IXMLDOMSchemaCollection2_QueryInterface(i32*, i32*, i8**) #1

declare dso_local i32 @ok(i32, i8*, ...) #1

declare dso_local i32 @IUnknown_Release(i32*) #1

declare dso_local i32 @IXMLDOMSchemaCollection2_Release(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
